--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,6 +6,10 @@ planner:
   swipe_a_margin: 5.0 # unit: deg
   swipe_speed: 0.07   # unit:m/s
   height: 0.015
+  start_point: [
+    [0.25, 0.6],
+    [0.25, -0.6],
+    ]
 
 gripper:
   hanyang:
